--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>SingleTonPattern</module>
-        <module>Java8Example</module>
         <module>ObserverPattern</module>
+        <module>Java8Example</module>
+        <module>SingleTonPattern</module>
+        <module>MainModule</module>
     </modules>
 
     <properties>
