--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,13 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea
+.idea/
 .idea/*
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/*.*
 *.iws
 *.iml
 *.ipr
-
 
 ### Eclipse ###
 .apt_generated
