--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>SingleTonPattern</module>
         <module>MainModule</module>
         <module>LiftExample</module>
+        <module>Parking</module>
     </modules>
 
     <properties>
