--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+idea
 .idea
 .idea/
 .idea/*
+.idea/compiler.xml
+.idea/encodings.xml
 *.iws
 *.iml
 *.ipr
