added Library Example

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>Parking</module>
         <module>JobSearchExample</module>
         <module>ATMExample</module>
+        <module>LibraryExample</module>
     </modules>
 
     <properties>
